# daw

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  PERFORMANCE.md  README.md  SYNC_API_DESIGN.md  cliff.toml  flake.nix  justfile
apps/daw/: Cargo.toml
apps/daw-guest-example/: Cargo.toml
apps/daw-guest-example/src/: main.rs
apps/daw/src/: lib.rs  main.rs
apps/example-extension/: Cargo.toml
apps/example-plugin/: Cargo.toml
apps/example-plugin/src/: lib.rs
apps/example-plugin/tests/: reaper_example_plugin.rs
crates/audio-controls/: Cargo.toml
crates/audio-controls/src/: lib.rs  prelude.rs
crates/daw/: Cargo.toml
crates/daw-allocator/: Cargo.toml
crates/daw-allocator/src/: allocator.rs  audio_state.rs  channels.rs  guards.rs  lib.rs  main_thread.rs  mutex_util.rs  runtime.rs
crates/daw-audio-graph/: Cargo.toml
crates/daw-audio-graph/src/: node.rs
crates/daw-bridge/: Cargo.toml
crates/daw-bridge/src/: guest_loader.rs  lib.rs  project_import.rs  routed_handler.rs  shm_host.rs
crates/daw-control/: Cargo.toml
crates/daw-control-sync/: Cargo.toml
crates/daw-control-sync/examples/: macro_control.rs
crates/daw-control-sync/src/: lib.rs  local_caller.rs  requests.rs
crates/daw-control/src/: action_registry.rs  audio_engine.rs  automation.rs  batch.rs  daw.rs  dock_host.rs  error.rs  ext_state.rs  fx.rs  input.rs  items.rs  lib.rs  markers.rs  midi_analysis.rs  midi_editor.rs  plugin_loader.rs  project.rs  regions.rs  routing.rs  tempo_map.rs  toolbar.rs  tracks.rs  transport.rs
crates/daw-extension-runtime/: Cargo.toml
crates/daw-extension-runtime/src/: lib.rs
crates/daw-module/: Cargo.toml
crates/daw-perf-test/: Cargo.toml
crates/daw-perf-test/src/: bench.rs  lib.rs
crates/daw-proto/: Cargo.toml
crates/daw-proto/spec/: README.md  capabilities.md  marker.md  plugin.md  project.md  track.md  transport.md
crates/daw-proto/src/: action_registry.rs  actions.rs  audio_engine.rs  capability.rs  dock_host.rs  dock_host_mock.rs  error.rs  ext_state.rs  health.rs  input.rs  lib.rs  midi_analysis.rs  plugin_loader.rs  position_conversion.rs  project.rs  resource.rs  toolbar.rs  ui.rs  undo.rs
crates/daw-reaper/: Cargo.toml
crates/daw-reaper-dioxus/: Cargo.toml
crates/daw-reaper-dioxus-ext/: Cargo.toml
crates/daw-reaper-dioxus-ext-test/: Cargo.toml
crates/daw-reaper-dioxus-ext-test/src/: lib.rs
crates/daw-reaper-dioxus-ext/src/: lib.rs
crates/daw-reaper-dioxus/src/: dock.rs  dock_host.rs  embedded.rs  hot_reload.rs  lib.rs  macos_input.rs  overlay.rs  service.rs  snapshot.rs
crates/daw-reaper-dioxus/tests/: panel_snapshot.rs
crates/daw-reaper-embed/: Cargo.toml
crates/daw-reaper-embed/src/: gpu.rs  lib.rs  platform.rs  text.rs  transparent.rs
crates/daw-reaper/src/: action_registry.rs  audio_accessor.rs  audio_engine.rs  automation.rs  bootstrap.rs  ext_state.rs  fx.rs  health.rs  input.rs  item.rs  lib.rs  live_midi.rs  main.rs  main_thread.rs  marker.rs  midi.rs  midi_analysis.rs  peak.rs  plugin_loader.rs  plugin_services.rs  position_conversion.rs  project.rs  project_context.rs  ptr_validation.rs  region.rs  resource.rs  routed_handler.rs  routing.rs  sync_api.rs  tempo_map.rs  toolbar.rs  track.rs  transport.rs  ui.rs
crates/daw-reaper/tests/: daw_helpers.rs  reaper_action_registry.rs  reaper_auto_color.rs  reaper_batch_stress.rs  reaper_dock_host.rs  reaper_example_plugin.rs  reaper_items.rs  reaper_live_setlist_sync.rs  reaper_multi_daw.rs  reaper_project_isolation.rs  reaper_setlist.rs  reaper_setlist_real.rs  reaper_setlist_sync.rs  reaper_shm_action_registry.rs  reaper_shm_hot_reload.rs  reaper_sync.rs  reaper_timer_health.rs  reaper_transport.rs  reaper_visual_e2e.rs
crates/daw-standalone/: Cargo.toml
crates/daw-standalone/examples/: minimal_telemetry_test.rs  play_rpp.rs
crates/daw-standalone/src/: automation.rs  ext_state.rs  fx.rs  item.rs  lib.rs  live_midi.rs  main.rs  marker.rs  midi.rs  midi_analysis.rs  platform.rs  position_conversion.rs  project.rs  region.rs  resource.rs  routing.rs  tempo_map.rs  track.rs  transport.rs  ui.rs
crates/daw-standalone/tests/: transport_tests.rs  visibility_tests.rs
crates/daw-test-extension/: Cargo.toml
crates/daw-test-extension/src/: guest_loader.rs  lib.rs  routed_handler.rs  shm_host.rs
crates/daw-ui/: Cargo.toml
crates/daw-ui/src/: lib.rs  panel_registration.rs  prelude.rs  signals.rs
crates/daw/src/: lib.rs  module.rs
crates/daw/tests/: als_rpp_roundtrip.rs  fixtures
crates/dawfile-aaf/: Cargo.toml
crates/dawfile-aaf/src/: convert.rs  error.rs  io.rs  lib.rs  types.rs
crates/dawfile-aaf/tests/: fixture_summary.rs  integration.rs
crates/dawfile-ableton/: Cargo.toml
crates/dawfile-ableton/examples/: parse_als.rs  roundtrip_als.rs
crates/dawfile-ableton/src/: convert.rs  error.rs  io.rs  lib.rs  types.rs
crates/dawfile-ableton/tests/: fixture_summary.rs  parse_fixtures.rs
crates/dawfile-dawproject/: Cargo.toml
crates/dawfile-dawproject/src/: convert.rs  error.rs  io.rs  lib.rs  types.rs
crates/dawfile-dawproject/tests/: parse_fixtures.rs  round_trip.rs
crates/dawfile-logic/: Cargo.toml
crates/dawfile-logic/src/: convert.rs  error.rs  io.rs  lib.rs  types.rs
crates/dawfile-logic/tests/: fixture_summary.rs  parse_fixture.rs
crates/dawfile-protools/: Cargo.toml
crates/dawfile-protools/examples/: check_markers.rs  check_playlists.rs  check_positions.rs  debug_entry.rs  dump.rs  dump_tempo.rs  inspect_playlists.rs  list_blocks.rs
crates/dawfile-protools/src/: block.rs  content_type.rs  convert.rs  cursor.rs  decrypt.rs  error.rs  io.rs  lib.rs  raw_block.rs  types.rs
crates/dawfile-protools/tests/: fixture_summary.rs  parse_fixtures.rs  round_trip.rs
crates/dawfile-reaper/: Cargo.toml
crates/dawfile-reaper/benches/: parse_perf.rs
crates/dawfile-reaper/docs/: lua_parity_api.md  performance-baseline.md
crates/dawfile-reaper/resources/: Basic Template (Tracks Only) .RPP  BeatPos Calculator Test.RPP  BeatPos Calculator Test_regions_markers.csv  Project Information Only.RPP  Region Test.RPP  (+2 more)
(+383 files in other folders)
