[workspace]
members = [
    "apps/daw",
    "crates/audio-controls",
    "crates/daw",
    "crates/daw-control",
    "crates/daw-control-sync",
    "crates/daw-proto",
    "crates/daw-reaper",
    "crates/daw-standalone",
    "crates/dawfile-reaper",
    "crates/daw-ui",
    "crates/reaper-test",
    "crates/reaper-test-macro",
    "crates/reaper-launcher",
    "crates/daw-allocator",
    "crates/daw-bridge",
    "crates/fts-audio-proto",
    "crates/fts-devtools",
    "crates/daw-extension-runtime",
    "apps/daw-guest-example",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Facade crate — the only public API surface for the daw domain
daw = { path = "crates/daw" }
# App crate (binary + lib)
daw-cli = { path = "apps/daw" }
# UI crate stays public (Dioxus components with feature flags)
daw-ui = { path = "crates/daw-ui", default-features = false }
# Widget crate stays public (standalone Dioxus widgets)
audio-controls = { path = "crates/audio-controls" }
# RT-aware allocator — offloads RT deallocation to background thread
daw-allocator = { path = "crates/daw-allocator" }
# Extension runtime — for hot-reloadable processes connecting via SHM
daw-extension-runtime = { path = "crates/daw-extension-runtime" }
# Dev tooling — REAPER extension install/symlink helpers (for xtask use)
fts-devtools = { path = "crates/fts-devtools" }
# NOTE: daw-proto, daw-control, daw-control-sync, daw-reaper, daw-standalone,
# dawfile-reaper are INTERNAL. Access them through the `daw` facade crate.

# Facet reflection - use crates.io 0.44.x
facet = { version = "0.44" }

# ROAM service framework (latest main)
roam = { git = "https://github.com/bearcove/roam.git", branch = "main" }
roam-stream = { git = "https://github.com/bearcove/roam.git", branch = "main" }
roam-shm = { git = "https://github.com/bearcove/roam.git", branch = "main" }
shm-primitives = { git = "https://github.com/bearcove/roam.git", branch = "main" }
shm-primitives-async = { git = "https://github.com/bearcove/roam.git", branch = "main" }

# CLI
clap = { version = "4", features = ["derive"] }

# Sibling repos
actions-proto = { git = "https://github.com/FastTrackStudios/input_actions.git", branch = "main" }
keyflow = { git = "https://github.com/FastTrackStudios/keyflow.git", branch = "main" }
dock-dioxus = { git = "https://github.com/FastTrackStudios/dock-dioxus.git", branch = "main", default-features = false }
dock-proto = { git = "https://github.com/FastTrackStudios/dock-dioxus.git", branch = "main" }

# Testing
reaper-test = { path = "crates/reaper-test" }
reaper-launcher = { path = "crates/reaper-launcher" }

# REAPER bindings (FTS fork with v7.63 ruler lane APIs)
reaper-low = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-medium = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-high = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-macros = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }

# UI
dioxus = "0.7.2"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
enumflags2 = "0.7"

# Observability
tracing = { version = "0.1", features = ["std"] }
moire = { version = "1.0", features = ["diagnostics"] }

# File watching
notify = "8"

# Utilities
eyre = "0.6"
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
crossbeam-channel = "0.5"
fragile = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Local development overrides ──────────────────────────────────────
# Uncomment to use local checkouts instead of GitHub.
#
# [patch."https://github.com/FastTrackStudios/input_actions.git"]
# actions-proto = { path = "../input_actions/crates/actions-proto" }
#
# [patch."https://github.com/FastTrackStudios/keyflow.git"]
# keyflow = { path = "../keyflow/crates/keyflow" }
#
# [patch."https://github.com/FastTrackStudios/dock-dioxus.git"]
# dock-dioxus = { path = "../dock-dioxus/crates/dock-dioxus" }
# dock-proto = { path = "../dock-dioxus/crates/dock-proto" }

# ── Vendored patches ──────────────────────────────────────────────────
# moire-trace-capture: tolerate broken frame-pointer chains (NixOS glibc
# is built without -fno-omit-frame-pointer). Upstream panics; our patch
# breaks gracefully. Remove once bearcove/moire accepts a fix upstream.
[patch.crates-io]
moire-trace-capture = { path = "vendor/moire-trace-capture" }

[workspace.lints.rust]
dead_code = "allow"
unused = "allow"

[workspace.lints.clippy]
