[package]
name = "example-extension"
version.workspace = true
edition.workspace = true
description = "Example SHM guest extension — connects to REAPER via daw-bridge and registers actions"

[[bin]]
name = "example-extension"
path = "src/main.rs"

[dependencies]
daw.workspace = true
daw-extension-runtime.workspace = true
tokio = { workspace = true, features = ["time", "net", "rt"] }
eyre = "0.6"
tracing.workspace = true
tracing-subscriber.workspace = true
