[package]
name = "example-plugin"
version.workspace = true
edition.workspace = true
description = "Example CLAP plugin with DAW API access — no direct reaper-rs dependency"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Plugin framework
nih_plug.workspace = true

# DAW API — the only dependency needed for REAPER access
daw = { path = "../../crates/daw", features = ["sync", "reaper"] }

[dev-dependencies]
daw = { path = "../../crates/daw", features = ["sync", "reaper"] }
reaper-test.workspace = true
tokio = { workspace = true, features = ["time"] }
eyre = "0.6"
