[package]
name = "audio-controls"
description = "Professional audio parameter control widgets for Dioxus"
version.workspace = true
edition.workspace = true

[dependencies]
# UI framework
dioxus = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "MouseEvent", "EventTarget"] }
js-sys = "0.3"

[features]
default = ["web"]
web = ["dep:dioxus"]

[lints]
workspace = true
