[package]
name = "daw-allocator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Real-time-aware allocator and main-thread task dispatch for DAW extensions. Inspired by Helgobox (https://github.com/helgoboss/helgobox)."

[dependencies]
