[package]
name = "daw-audio-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core audio processing DAG engine — AudioNode trait, BufferPool, and graph compiler."

[lib]
path = "src/node.rs"

[dependencies]
tracing.workspace = true

[dev-dependencies]
approx = "0.5"
