[package]
name = "daw-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
name = "reaper_daw_bridge"
path = "src/lib.rs"

[dependencies]
# DAW facade (reaper impl)
daw = { workspace = true, features = ["reaper"] }

# RT-aware allocator
daw-allocator.workspace = true

# ROAM service framework
vox.workspace = true
vox-stream.workspace = true
vox-shm.workspace = true
shm-primitives.workspace = true
shm-primitives-async.workspace = true

# Async runtime

moire.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }

# REAPER bindings
reaper-high.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
reaper-macros.workspace = true

# Main thread dispatch
crossbeam-channel.workspace = true
fragile.workspace = true

# File watching
notify.workspace = true

# Project file import (Ableton/ProTools/AAF/DAWproject → REAPER conversion)
dawfile-ableton = { path = "../dawfile-ableton" }
dawfile-protools = { path = "../dawfile-protools" }
dawfile-aaf = { path = "../dawfile-aaf" }
dawfile-dawproject = { path = "../dawfile-dawproject" }
dawfile-reaper = { path = "../dawfile-reaper" }

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
eyre = "0.6"

# Ensure child processes die with parent (cross-platform)
ur-taking-me-with-you.workspace = true
