[package]
name = "daw-reaper-dioxus-ext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REAPER extension providing daw-reaper-dioxus rendering as a service (cdylib loaded into REAPER as `reaper_daw_dioxus.so`)"

[lib]
crate-type = ["cdylib"]
name = "reaper_daw_dioxus"
path = "src/lib.rs"

[dependencies]
daw-reaper-dioxus = { path = "../daw-reaper-dioxus" }
reaper-low.workspace = true
reaper-medium.workspace = true
reaper-high.workspace = true
reaper-macros = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "allow"
