[package]
name = "daw-reaper-dioxus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Dioxus-native overlay rendering for REAPER extensions (internal — access via daw facade with reaper-ui feature)"

[dependencies]
daw-reaper-embed = { path = "../daw-reaper-embed" }

# Module-system primitives (PanelDef, DockPosition). Leaf crate — does NOT
# pull in the daw facade, avoiding the daw <-> daw-reaper-dioxus cycle.
daw-module = { path = "../daw-module" }

# DockHostService trait + DockHandle/DockEvent types
daw-proto = { path = "../daw-proto" }
vox.workspace = true
moire.workspace = true
tokio = { workspace = true, features = ["sync"] }

# REAPER API access
reaper-low.workspace = true
reaper-medium.workspace = true
reaper-high.workspace = true

# Dioxus-native with blitz rendering
dioxus-native.workspace = true
blitz-dom.workspace = true
blitz-paint.workspace = true
blitz-traits.workspace = true

# Rendering pipeline
anyrender_vello.workspace = true
vello.workspace = true
wgpu.workspace = true

# Hot reload (enabled by default for dev, disable for release)
dioxus-devtools = { workspace = true, optional = true }

# Event types for forwarding input to Blitz
keyboard-types = "0.7"

# Utilities
futures-util = "0.3"
crossbeam = "0.8"
raw-window-handle = "0.6"
tracing.workspace = true

[features]
default = ["hot-reload"]
hot-reload = ["dep:dioxus-devtools"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
x11-dl = "2.21"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
objc.workspace = true

[lints.rust]
unsafe_code = "allow"
