[package]
name = "daw-reaper-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transparent overlay windows with Vello rendering for REAPER extensions (internal — access via daw facade with reaper-ui feature)"

[dependencies]
wgpu.workspace = true
vello.workspace = true
skrifa.workspace = true
pollster.workspace = true
raw-window-handle = "0.6"
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
objc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21"

[lints.rust]
unsafe_code = "allow"
