[package]
name = "daw-reaper"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# This is a library crate, not a cell binary.
# The REAPER implementation runs in-process within the reaper-extension.

[dependencies]
daw-proto.workspace = true
roam.workspace = true
tracing.workspace = true
tokio.workspace = true
peeps.workspace = true
keyflow = { workspace = true, features = ["engraver", "midi-import"] }

# RPP chunk parsing/serialization for chunk-based FX manipulation
dawfile-reaper.workspace = true

# REAPER bindings for actual DAW control
reaper-high.workspace = true
reaper-medium.workspace = true
reaper-low.workspace = true
enumflags2.workspace = true
camino = "1"

[dev-dependencies]
daw-control.workspace = true
daw-proto.workspace = true
signal = { path = "../../../FastTrackStudio/crates/signal/signal", features = ["daw"] }
signal-live = { path = "../../../FastTrackStudio/crates/signal/signal-live" }
signal-proto = { path = "../../../FastTrackStudio/crates/signal/signal-proto" }
reaper-test.workspace = true
eyre.workspace = true
serde_json = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
