[package]
name = "daw-standalone"
version = "0.1.0"
edition = "2024"

[dependencies]
daw-proto = { path = "../daw-proto" }
roam = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
moire = { workspace = true }
uuid = { version = "1", features = ["v4"] }
keyflow = { workspace = true, features = ["engraver", "midi-import"] }

[dev-dependencies]
daw-proto = { path = "../daw-proto" }
daw-control = { path = "../daw-control" }
eyre = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
