[package]
name = "daw-standalone"
version = "0.1.0"
edition = "2024"

[dependencies]
daw-proto = { path = "../daw-proto" }
roam = { workspace = true }
tracing = { workspace = true }
moire = { workspace = true }
uuid = { version = "1", features = ["v4"] }
keyflow = { workspace = true, features = ["engraver", "midi-import"] }
web-time = "1"

# Audio engine (feature-gated)
cpal = { version = "0.17", optional = true, features = ["wasm-bindgen"] }
symphonia = { version = "0.5", optional = true, features = ["mp3", "ogg", "flac", "wav", "pcm", "aac"] }

# RPP project loading (feature-gated, native only — dawfile-reaper uses rayon)
dawfile-reaper = { path = "../dawfile-reaper", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
async-lock = "3"

[dev-dependencies]
daw-proto = { path = "../daw-proto" }
daw-control = { path = "../daw-control" }
eyre = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[features]
audio = ["dep:cpal", "dep:symphonia"]
rpp-loader = ["audio", "dep:dawfile-reaper"]
